major code cleanup, changed to simplified AST, distinction between resolving a value (looking up a variable) and evaluating a value. Also changed to all native types in AST, with addition of the Symbol class, allowing code-as-data and data-as-code.