@@ -4,17 +4,18 @@ import java.util.List;
 
 import com.googlecode.linkedlisp.Function;
 import com.googlecode.linkedlisp.ListExpression;
-import com.googlecode.linkedlisp.State;
+import com.googlecode.linkedlisp.Environment;
 import com.hp.hpl.jena.rdf.model.Resource;
+import java.util.List;
 
 public class Prefix extends Function {
 
     @Override
-	public Object execute(State s, ListExpression params) throws Exception {
-    	Object val = params.getFirst().getValue();
-    	if(val instanceof String && params.size() == 2) {
-	        String prefixName = (String) val;
-	        Resource prefixResource = (Resource) params.get(1).evaluate(s);
+	public Object execute(Environment s, List params) throws Exception {
+    	Object val = params.get(0);
+    	if(params.size() == 2) {
+	        String prefixName = val.toString();
+	        Resource prefixResource = s.resolveAsResource(s.evaluate(params.get(1)));
 	        s.setPrefix(prefixName, prefixResource.getURI());
     	} else if(val instanceof List && params.size() == 2) {
     		for(Object o : (List) val) {
